sys/prebuilt-bindings/geos_3.13.rs

/* automatically generated by rust-bindgen 0.60.1 */

pub const GEOS_VERSION_MAJOR: u32 = 3;
pub const GEOS_VERSION_MINOR: u32 = 13;
pub const GEOS_VERSION_PATCH: u32 = 0;
pub const GEOS_CAPI_VERSION_MAJOR: u32 = 1;
pub const GEOS_CAPI_VERSION_MINOR: u32 = 19;
pub const GEOS_CAPI_VERSION_PATCH: u32 = 0;
pub type wchar_t = libc::c_int;
pub type max_align_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSContextHandle_HS {
    _unused: [u8; 0],
}
pub type GEOSContextHandle_t = *mut GEOSContextHandle_HS;
pub type GEOSMessageHandler =
    ::std::option::Option<unsafe extern "C" fn(fmt: *const libc::c_char, ...)>;
pub type GEOSMessageHandler_r = ::std::option::Option<
    unsafe extern "C" fn(message: *const libc::c_char, userdata: *mut libc::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSGeom_t {
    _unused: [u8; 0],
}
pub type GEOSGeometry = GEOSGeom_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSPrepGeom_t {
    _unused: [u8; 0],
}
pub type GEOSPreparedGeometry = GEOSPrepGeom_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSCoordSeq_t {
    _unused: [u8; 0],
}
pub type GEOSCoordSequence = GEOSCoordSeq_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSSTRtree_t {
    _unused: [u8; 0],
}
pub type GEOSSTRtree = GEOSSTRtree_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSBufParams_t {
    _unused: [u8; 0],
}
pub type GEOSBufferParams = GEOSBufParams_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GEOSMakeValidParams_t {
    _unused: [u8; 0],
}
pub type GEOSMakeValidParams = GEOSMakeValidParams_t;
pub type GEOSGeom = *mut GEOSGeometry;
pub type GEOSCoordSeq = *mut GEOSCoordSequence;
pub const GEOSGeomTypes_GEOS_POINT: GEOSGeomTypes = 0;
pub const GEOSGeomTypes_GEOS_LINESTRING: GEOSGeomTypes = 1;
pub const GEOSGeomTypes_GEOS_LINEARRING: GEOSGeomTypes = 2;
pub const GEOSGeomTypes_GEOS_POLYGON: GEOSGeomTypes = 3;
pub const GEOSGeomTypes_GEOS_MULTIPOINT: GEOSGeomTypes = 4;
pub const GEOSGeomTypes_GEOS_MULTILINESTRING: GEOSGeomTypes = 5;
pub const GEOSGeomTypes_GEOS_MULTIPOLYGON: GEOSGeomTypes = 6;
pub const GEOSGeomTypes_GEOS_GEOMETRYCOLLECTION: GEOSGeomTypes = 7;
pub const GEOSGeomTypes_GEOS_CIRCULARSTRING: GEOSGeomTypes = 8;
pub const GEOSGeomTypes_GEOS_COMPOUNDCURVE: GEOSGeomTypes = 9;
pub const GEOSGeomTypes_GEOS_CURVEPOLYGON: GEOSGeomTypes = 10;
pub const GEOSGeomTypes_GEOS_MULTICURVE: GEOSGeomTypes = 11;
pub const GEOSGeomTypes_GEOS_MULTISURFACE: GEOSGeomTypes = 12;
pub type GEOSGeomTypes = libc::c_uint;
pub const GEOSWKBByteOrders_GEOS_WKB_XDR: GEOSWKBByteOrders = 0;
pub const GEOSWKBByteOrders_GEOS_WKB_NDR: GEOSWKBByteOrders = 1;
pub type GEOSWKBByteOrders = libc::c_uint;
pub const GEOSWKBFlavors_GEOS_WKB_EXTENDED: GEOSWKBFlavors = 1;
pub const GEOSWKBFlavors_GEOS_WKB_ISO: GEOSWKBFlavors = 2;
pub type GEOSWKBFlavors = libc::c_uint;
pub type GEOSQueryCallback = ::std::option::Option<
    unsafe extern "C" fn(item: *mut libc::c_void, userdata: *mut libc::c_void),
>;
pub type GEOSDistanceCallback = ::std::option::Option<
    unsafe extern "C" fn(
        item1: *const libc::c_void,
        item2: *const libc::c_void,
        distance: *mut libc::c_double,
        userdata: *mut libc::c_void,
    ) -> libc::c_int,
>;
pub type GEOSTransformXYCallback = ::std::option::Option<
    unsafe extern "C" fn(
        x: *mut libc::c_double,
        y: *mut libc::c_double,
        userdata: *mut libc::c_void,
    ) -> libc::c_int,
>;
pub type GEOSInterruptCallback = ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub fn GEOS_interruptRegisterCallback(cb: GEOSInterruptCallback) -> GEOSInterruptCallback;
}
extern "C" {
    pub fn GEOS_interruptRequest();
}
extern "C" {
    pub fn GEOS_interruptCancel();
}
extern "C" {
    pub fn GEOS_init_r() -> GEOSContextHandle_t;
}
extern "C" {
    pub fn GEOS_finish_r(handle: GEOSContextHandle_t);
}
extern "C" {
    pub fn GEOSContext_setNoticeHandler_r(
        extHandle: GEOSContextHandle_t,
        nf: GEOSMessageHandler,
    ) -> GEOSMessageHandler;
}
extern "C" {
    pub fn GEOSContext_setErrorHandler_r(
        extHandle: GEOSContextHandle_t,
        ef: GEOSMessageHandler,
    ) -> GEOSMessageHandler;
}
extern "C" {
    pub fn GEOSContext_setNoticeMessageHandler_r(
        extHandle: GEOSContextHandle_t,
        nf: GEOSMessageHandler_r,
        userData: *mut libc::c_void,
    ) -> GEOSMessageHandler_r;
}
extern "C" {
    pub fn GEOSContext_setErrorMessageHandler_r(
        extHandle: GEOSContextHandle_t,
        ef: GEOSMessageHandler_r,
        userData: *mut libc::c_void,
    ) -> GEOSMessageHandler_r;
}
extern "C" {
    pub fn GEOSCoordSeq_create_r(
        handle: GEOSContextHandle_t,
        size: libc::c_uint,
        dims: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyFromBuffer_r(
        handle: GEOSContextHandle_t,
        buf: *const libc::c_double,
        size: libc::c_uint,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyFromArrays_r(
        handle: GEOSContextHandle_t,
        x: *const libc::c_double,
        y: *const libc::c_double,
        z: *const libc::c_double,
        m: *const libc::c_double,
        size: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyToBuffer_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        buf: *mut libc::c_double,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_copyToArrays_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
        z: *mut libc::c_double,
        m: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_clone_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_destroy_r(handle: GEOSContextHandle_t, s: *mut GEOSCoordSequence);
}
extern "C" {
    pub fn GEOSCoordSeq_setX_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setY_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setZ_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXY_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: libc::c_double,
        y: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXYZ_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: libc::c_double,
        y: libc::c_double,
        z: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setOrdinate_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getX_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getY_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getZ_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXY_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXYZ_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
        z: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getOrdinate_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getSize_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        size: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getDimensions_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        dims: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_isCCW_r(
        handle: GEOSContextHandle_t,
        s: *const GEOSCoordSequence,
        is_ccw: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSProject_r(
        handle: GEOSContextHandle_t,
        line: *const GEOSGeometry,
        point: *const GEOSGeometry,
    ) -> libc::c_double;
}
extern "C" {
    pub fn GEOSInterpolate_r(
        handle: GEOSContextHandle_t,
        line: *const GEOSGeometry,
        d: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSProjectNormalized_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        p: *const GEOSGeometry,
    ) -> libc::c_double;
}
extern "C" {
    pub fn GEOSInterpolateNormalized_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        d: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBuffer_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
    ) -> *mut GEOSGeometry;
}
pub const GEOSBufCapStyles_GEOSBUF_CAP_ROUND: GEOSBufCapStyles = 1;
pub const GEOSBufCapStyles_GEOSBUF_CAP_FLAT: GEOSBufCapStyles = 2;
pub const GEOSBufCapStyles_GEOSBUF_CAP_SQUARE: GEOSBufCapStyles = 3;
pub type GEOSBufCapStyles = libc::c_uint;
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_ROUND: GEOSBufJoinStyles = 1;
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_MITRE: GEOSBufJoinStyles = 2;
pub const GEOSBufJoinStyles_GEOSBUF_JOIN_BEVEL: GEOSBufJoinStyles = 3;
pub type GEOSBufJoinStyles = libc::c_uint;
extern "C" {
    pub fn GEOSBufferParams_create_r(handle: GEOSContextHandle_t) -> *mut GEOSBufferParams;
}
extern "C" {
    pub fn GEOSBufferParams_destroy_r(handle: GEOSContextHandle_t, parms: *mut GEOSBufferParams);
}
extern "C" {
    pub fn GEOSBufferParams_setEndCapStyle_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        style: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setJoinStyle_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        joinStyle: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setMitreLimit_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        mitreLimit: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setQuadrantSegments_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        quadSegs: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSBufferParams_setSingleSided_r(
        handle: GEOSContextHandle_t,
        p: *mut GEOSBufferParams,
        singleSided: libc::c_int,
    ) -> libc::c_int;
}
